New social media logos/ new g4l logo and new app 1vs100

--- a/index.html
+++ b/index.html
@@ -66,15 +66,18 @@
 
  		<br>
 
- 		<a href="g4l.html#ikq"><span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/nq.png"></span></a>
+ 		<a href="g4l.html#ikq"><span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/ikq.png"></span></a>
 
  		<a href="g4l.html#mn"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/mn.png"></span></a>
 
  		<a href="g4l.html#ft"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/ft.png"></span></a><br>
 
- 		<a href="g4l.html#g4l"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/g4l.png"></span></a>
+ 		<a href="g4l.html#smt"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/smt.png"></span></a>
 
- 		<a href="g4l.html#smt"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/smt.png"></span></a><br><br>
+ 		 		<a href="g4l.html#g4l"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/g4l.png"></span></a>
+
+
+ 		<a href="g4l.html#g4l"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/1vs100.png"></span></a><br><br>
  	</div>	
  	
  	
