--- a/g4l.html
+++ b/g4l.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="style2.css" /> <title>Go4Lunch</title>
+  <link rel="stylesheet" type="text/css" href="style2.css" /> <title>Apps Portfolio</title>
   
 </head>
 <body>
@@ -352,6 +352,37 @@
 </div>
 </div>
 
+<div class="foo" id="g4l">
+		  <span class="letter" data-letter="1">1</span>
+		    <span class="letter" data-letter="V">V</span>
+		    	<span class="letter" data-letter="S">S</span>
+		    		<span class="letter" data-letter="1">1</span>
+
+		    		<span class="letter" data-letter="0">0</span>
+		    		<span class="letter" data-letter="0">0</span>
+
+</div>
+
+
+<br><br>
+
+	<div id="content">
+<div id="gif">
+	<img id="phone"src="images/1vs100.gif.gif" height="600px;" style="float: center;">
+</div>
+<div id=text>
+
+		<div id="achievements" ><h3>Project description</h3> <br>
+	<div id="skills">This project was the follow up to my success with International Knowledge Quiz. <br> This application is now on the Google Play Store and is now my 2nd app available to the public<br>The aim of the game is to be the last player left. Each round a question will be asked, if the player chooses the wrong answer they are out. Starting
+		of with 100 players, the number goes down as the rounds go on.<br></div><br>
+	<div id="skills"><h3>Skills involved</h3> <br>
+	<div id="skills">• Turning an idea into a working app<br>• Use Firebase Firestore as a backend<br>
+
+</div>	
+</div>
+</div>
+</div>
+</div>
 	
 </body>
    
