--- a/g4l.html
+++ b/g4l.html
@@ -352,7 +352,7 @@
 </div>
 </div>
 
-<div class="foo" id="g4l">
+<div class="foo" id="1vs100">
 		  <span class="letter" data-letter="1">1</span>
 		    <span class="letter" data-letter="V">V</span>
 		    	<span class="letter" data-letter="S">S</span>
@@ -377,6 +377,83 @@
 		of with 100 players, the number goes down as the rounds go on.<br></div><br>
 	<div id="skills"><h3>Skills involved</h3> <br>
 	<div id="skills">• Turning an idea into a working app<br>• Use Firebase Firestore as a backend<br>
+
+</div>	
+</div>
+</div>
+</div>
+</div>
+
+<div class="foo" id="1vs100">
+		  <span class="letter" data-letter="M">M</span>
+		    <span class="letter" data-letter="O">O</span>
+		    	<span class="letter" data-letter="N">N</span>
+		    		<span class="letter" data-letter="E">E</span>
+		    		<span class="letter" data-letter="Y">Y</span>
+		    		<span class="letter" data-letter="B">B</span>
+		    		<span class="letter" data-letter="O">O</span>
+		    		<span class="letter" data-letter="X">X</span>
+
+</div>
+
+
+<br><br>
+
+	<div id="content">
+<div id="gif">
+	<img id="phone"src="images/mb.gif" height="600px;" style="float: center;">
+</div>
+<div id=text>
+
+		<div id="achievements" ><h3>Project description</h3> <br>
+	<div id="skills">This application was made for the company MoneyBox based in London. This app helps people invest little amounts of money. The users simply add money to their e-wallet and MoneyBox will invest it into a company and give back a small margin to the user.<br></div><br>
+	<div id="skills"><h3>Skills involved</h3> <br>
+	<div id="skills">• Use of regex for text inputs<br>• Use of all forms of API (POST/UPDATE/GET...)<br>• Satisfying the clients needs
+
+</div>	
+</div>
+</div>
+</div>
+</div>
+
+
+<div class="foo" id="1vs100">
+		  <span class="letter" data-letter="R">R</span>
+		    <span class="letter" data-letter="E">E</span>
+		    	<span class="letter" data-letter="A">A</span>
+		    		<span class="letter" data-letter="L">L</span>
+		    		<span class="letter" data-letter=" "> </span>
+		    		<span class="letter" data-letter="E">E</span>
+		    		<span class="letter" data-letter="S">S</span>
+		    		<span class="letter" data-letter="T">T</span>
+		    		<span class="letter" data-letter="A">A</span>
+		    		<span class="letter" data-letter="T">T</span>
+		    		<span class="letter" data-letter="E">E</span>
+		    				    		<br>
+
+		    		<span class="letter" data-letter="M">M</span>
+		    		<span class="letter" data-letter="A">A</span>
+		    		<span class="letter" data-letter="N">N</span>
+		    		<span class="letter" data-letter="A">A</span>
+		    		<span class="letter" data-letter="G">G</span>
+		    		<span class="letter" data-letter="E">E</span>
+		    		<span class="letter" data-letter="R">R</span>
+
+
+
+</div>
+
+
+<br><br>
+
+	<div id="content">
+<div id="gif">
+<!--	<img id="phone"src="images/mb.gif" height="600px;" style="float: center;"> -->
+</div>
+<div id=text>
+
+		<div id="achievements" ><h3>Work in progress...</h3> <br>
+	
 
 </div>	
 </div>
