--- a/index.html
+++ b/index.html
@@ -74,10 +74,13 @@
 
  		<a href="g4l.html#smt"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/smt.png"></span></a>
 
- 		 		<a href="g4l.html#g4l"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/g4l.png"></span></a>
+ 		<a href="g4l.html#g4l"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/g4l.png"></span></a>
 
+ 		<a href="g4l.html#1vs100"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/1vs100.png"></span></a><br>
 
- 		<a href="g4l.html#g4l"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/1vs100.png"></span></a><br><br>
+ 		<a href="g4l.html#mb"><span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/mb.jpg"></span></a>
+
+ 		<a href="g4l.html#rem"> <span class="textWithBlurredBg"><img class="filmMargin" style="border-radius: 15%;" src="images/rem.png"></span></a><br><br>
  	</div>	
  	
  	
